--- a/src/components/post_summary.module.css
+++ b/src/components/post_summary.module.css
@@ -3,6 +3,11 @@
   color: var(--color3);
 }
 
+.excerpt {
+  margin-top: 1em;
+  margin-left: 0;
+}
+
 /* Divider styling: https://www.cssportal.com/blog/style-hr-tag-with-css/ */
 hr {
   height: 1px;
