--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,13 +1,32 @@
 :root {
-  --color1: #011627ff;
-  --background-color: #fdfffcff;
-  --color3: #2ec4b6ff;
-  --color4: #e71d36ff;
-  --color5: #ff9f1cff;
   --light-grey: hsl(0, 0%, 50%);
+
+  --claret: #851b41ff;
+  --radical-red: #ff3169ff;
+  --french-pink: #f66e9bff;
+  --tart-orange: #ff3b3fff;
+  --princeton-orange: #fd8e3eff;
+  --space-cadet: #252056ff;
+  --air-superiority-blue: #72a0c1ff;
+  --floral-white: #fcf9f2ff;
+  --independence: #4f4f6eff;
+  --oxford-blue: #12122bff;
+
+  --background-color: #FDFFFC;
+  --post-title: var(--tart-orange);
+  --text-color: var(--oxford-blue);
+  --link-hover-color: #60B2E5;
 }
 
 html {
   font-family: Cambria, Georgia, serif;
   background-color: var(--background-color);
+}
+
+body {
+  color: var(--text-color);
+}
+
+a:hover {
+  color: var(--link-hover-color);
 }
