--- a/src/components/post_summary.module.css
+++ b/src/components/post_summary.module.css
@@ -17,7 +17,7 @@ h4 {
 }
 
 /* Divider styling: https://www.cssportal.com/blog/style-hr-tag-with-css/ */
-hr {
+hr.divider {
   height: 1px;
   border: 0;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); 
@@ -25,7 +25,7 @@ hr {
   margin: 2em 0em;
 }
 
-hr:after { 
+hr.divider:after { 
   content: '\002702'; 
   display: inline-block; 
   position: relative; 
