--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -21,28 +21,43 @@ h1.title {
 .titleFlouncy {
   color: var(--flouncy-title-color);
   font-family: "Satisfy", "handwriting", serif;
-  font-size: 2.5em;
+  font-size: 2em;
   font-weight: normal;
 }
 
 .titleTech {
   color: var(--tech-title-color);
   font-family: "Courier New", monospace;
-  font-size: 2.8em;
+  font-size: 2.4em;
   font-family: 
 }
 
 div.titleSpaceHolder {
   display: inline-block;
-  width: 6em;
+  width: 5em;
 }
 
-div.breakBefore {
-  break-before: always
+@media screen and (max-width: 900px) {
+  div.titleSpaceHolder {
+    display: none;
+  }
 }
+
+@media screen and (max-width: 700px) {
+  hr.stitchingLine {
+    display: none;
+  }
+}
+
+hr.stitchingLine {
+  height: 0px;
+  border: 1px dashed black;
+  background-color: var(--background-color);
+}
+
 
 .centerSection {
-  max-width: 40em;
+  max-width: 32em;
   margin: 0 auto;
   padding: 0.5em;
 }
