--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,5 +1,7 @@
 .blogHeader {
-  margin: 3em
+  margin-bottom: 2em;
+  margin-top: 1em;
+  padding: 0.5em 0.5em 0em 0.5em;
 }
 
 .titleFlexBox {
@@ -49,15 +51,25 @@ div.titleSpaceHolder {
   }
 }
 
-hr.stitchingLine {
-  height: 0px;
-  border: 1px dashed black;
-  background-color: var(--background-color);
+.navLinks {
+  margin: 0px;
+  padding: 0px;
+  margin-block-end: 0px;
 }
 
-
 .centerSection {
-  max-width: 32em;
+  max-width: 40em;
   margin: 0 auto;
   padding: 0.5em;
+}
+
+.backgroundDimmer {
+  position: fixed; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-color: var(--background-color);
+  opacity: 0.4;
 }
