--- a/src/templates/blog-post.module.css
+++ b/src/templates/blog-post.module.css
@@ -1,3 +1,11 @@
 h1.title {
   color: var(--post-title);
 }
+
+/* Iframes that are not the Disqus iframe */
+iframe:not([title='Disqus']) {
+  width: 100%;
+  height: 25em;
+  border-width: 0px;
+  box-shadow: 2px 2px 12px var(--light-grey);
+}
